--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PokeID | Choose you Pokemon!</title>
+    <title>PokeID | Choose your Pokemon!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,7 +18,6 @@
         </canvas>
         <input type="text" placeholder="Name or ID" name="id" autocomplete="off" autofocus>
     </form>
-    <!-- <button id="button">Vamo' a calmarno</button> -->
     
     <script>
         window.CSS.registerProperty({
@@ -49,58 +48,66 @@
             const data = new FormData(form)
             const id = data.get('id')
             const pokemon = await getPokemon(id)
-            renderPokemon(pokemon)
+            const pokemonDrawed = await renderPokemon(pokemon)
+            const colors = draw.colorPalette(90)
+            updateProperties(colors)
         }
+
         // Richiesta fetch per ottenere i dati json della API Pokemon
         async function getPokemon(id) {
             const res = await fetch(`https://pokeapi.co/api/v2/pokemon/${id}`)
             const pokemon = await res.json()
             return pokemon
         }
+        // Con Draw cominciamo a Modularizzare le funzioni con Classi
+        class Draw {
+            constructor(canvasElem) {
+                this.canvas = canvasElem
+                this.ctx = this.canvas.getContext('2d')
+                this.image = new Image()
+                this.image.setAttribute('crossOrigin', 'anonymous')   
+            }
+            render(url) {
+                const { width, height } = this.canvas
+                this.image.setAttribute('src', url)
+                return new Promise((resolve, reject) => {
+                    this.image.addEventListener('load', () => {
+                    this.ctx.clearRect(0, 0, width, height)
+                    this.ctx.drawImage(this.image, 0, 0, width, height)
+                    resolve('Carica Colori completa!')
+                })
+                // this.colors = this.colorPalette()
+                // updateProperties(this.colors)
+            })
+            }
 
-        const ctx = canvas.getContext('2d')
-        const image = new Image()
-        image.setAttribute('crossOrigin', 'anonymous')
+            colorPalette(quality = 90) {
+                const { width, height } = this.canvas
+                const imgData = this.ctx.getImageData(0, 0, width, height).data
+                const colors = []
+                for (let i = 0; i < width * height; i = i + quality) {
+                    const offset = i * 4
+                    const alpha = imgData[offset + 3]
+                    if (alpha > 0 ) {
+                        const red = imgData[offset]
+                        const green = imgData[offset + 1]
+                        const blue = imgData[offset + 2]
+                        colors.push({red, green, blue})
+                    }
+                }
+                return colors
+            }
+        }
+
+        const draw = new Draw(canvas)
         
         // Stampa il pokemon all'interno del CANVAS
-        function renderPokemon(pokemon) {
-            image.setAttribute('src', pokemon.sprites.front_default)
-            image.addEventListener('load', () => {
-                ctx.clearRect(0, 0, canvas.width, canvas.height)
-                ctx.drawImage(image, 0, 0, canvas.width, canvas.height)
-                const colors = getColorPalette(ctx)
-                updateProperties(colors)
-            })
+        async function renderPokemon(pokemon) {
+            await draw.render(pokemon.sprites.front_default)
+            return draw
         }
 
-        // Scelta dei colori principali del Pokemon
-        function getColorPalette(ctx) {
-            const imgData = ctx.getImageData(0, 0, canvas.width, canvas.height).data
-            const quality = 90
-            const colors = []
-            for (let i = 0; i < canvas.width * canvas.height; i = i + quality) {
-                const offset = i * 4
-                const alpha = imgData[offset + 3]
-                if (alpha > 0 ) {
-                    const red = imgData[offset]
-                    const green = imgData[offset + 1]
-                    const blue = imgData[offset + 2]
-                    colors.push({red, green, blue})
-                }
-            }
-            return colors
-        }
-
-        // button.addEventListener('click', () => {
-        //     updateProperties(['#71bfb1', '#5fa195', '#c55d00'])
-        // })
-
-        // function updateProperties(colors) {
-        //     document.body.style.setProperty('--primary', colors[0]);
-        //     document.body.style.setProperty('--secondary', colors[1]);
-        //     document.body.style.setProperty('--tertiary', colors[2]);
-        // }
-
+        // Aggiornamento per transizioni CSS
         function updateProperties(colors) {
             document.body.style.setProperty('--primary', `rgba(${colors[0].red} ${colors[0].green} ${colors[0].blue})`);
             document.body.style.setProperty('--secondary', `rgba(${colors[1].red} ${colors[1].green} ${colors[1].blue})`);
