--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeID | Choose your Pokemon!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="palette">
@@ -18,100 +18,8 @@
         </canvas>
         <input type="text" placeholder="Name or ID" name="id" autocomplete="off" autofocus>
     </form>
-    
-    <script>
-        window.CSS.registerProperty({
-            name: '--primary',
-            syntax: '<color>',
-            inherits: 'true',
-             initialValue: '#ffd924'
-        })
-        window.CSS.registerProperty({
-            name: '--secondary',
-            syntax: '<color>',
-            inherits: 'true',
-             initialValue: '#ffd924'
-        })
-        window.CSS.registerProperty({
-            name: '--tertiary',
-            syntax: '<color>',
-            inherits: 'true',
-             initialValue: '#ffd924'
-        })
-        window.CSS.paintWorklet.addModule('bezel.js');
-
-        form.addEventListener('submit', handleSubmit)
-
-        async function handleSubmit(event) {
-            event.preventDefault()
-            const data = new FormData(form)
-            const id = data.get('id')
-            const pokemon = await getPokemon(id)
-            const pokemonDrawed = await renderPokemon(pokemon)
-            const colors = draw.colorPalette(90)
-            updateProperties(colors)
-        }
-
-        // Richiesta fetch per ottenere i dati json della API Pokemon
-        async function getPokemon(id) {
-            const res = await fetch(`https://pokeapi.co/api/v2/pokemon/${id}`)
-            const pokemon = await res.json()
-            return pokemon
-        }
-        // Con Draw cominciamo a Modularizzare le funzioni con Classi
-        class Draw {
-            constructor(canvasElem) {
-                this.canvas = canvasElem
-                this.ctx = this.canvas.getContext('2d')
-                this.image = new Image()
-                this.image.setAttribute('crossOrigin', 'anonymous')   
-            }
-            render(url) {
-                const { width, height } = this.canvas
-                this.image.setAttribute('src', url)
-                return new Promise((resolve, reject) => {
-                    this.image.addEventListener('load', () => {
-                    this.ctx.clearRect(0, 0, width, height)
-                    this.ctx.drawImage(this.image, 0, 0, width, height)
-                    resolve('Carica Colori completa!')
-                })
-                // this.colors = this.colorPalette()
-                // updateProperties(this.colors)
-            })
-            }
-
-            colorPalette(quality = 90) {
-                const { width, height } = this.canvas
-                const imgData = this.ctx.getImageData(0, 0, width, height).data
-                const colors = []
-                for (let i = 0; i < width * height; i = i + quality) {
-                    const offset = i * 4
-                    const alpha = imgData[offset + 3]
-                    if (alpha > 0 ) {
-                        const red = imgData[offset]
-                        const green = imgData[offset + 1]
-                        const blue = imgData[offset + 2]
-                        colors.push({red, green, blue})
-                    }
-                }
-                return colors
-            }
-        }
-
-        const draw = new Draw(canvas)
-        
-        // Stampa il pokemon all'interno del CANVAS
-        async function renderPokemon(pokemon) {
-            await draw.render(pokemon.sprites.front_default)
-            return draw
-        }
-
-        // Aggiornamento per transizioni CSS
-        function updateProperties(colors) {
-            document.body.style.setProperty('--primary', `rgba(${colors[0].red} ${colors[0].green} ${colors[0].blue})`);
-            document.body.style.setProperty('--secondary', `rgba(${colors[1].red} ${colors[1].green} ${colors[1].blue})`);
-            document.body.style.setProperty('--tertiary', `rgba(${colors[2].red} ${colors[2].green} ${colors[2].blue})`);
-        }
-    </script>
+    <script src="js/paint-modules.js"></script>
+    <script src="js/custom-properties.js"></script>
+    <script src="js/app.js" type="module"></script>
 </body>
 </html>
