--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <canvas id="canvas" width="100" height="100"> </canvas>
       <input
         type="text"
+        class="bezel"
         placeholder="Name or ID"
         name="id"
         autocomplete="off"
